--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,10 @@ nav a {
     padding: 20px;
 }
 
+main {
+    max-width: 840px;
+}
+
 h1 {
     color: darkblue;
 }
@@ -23,4 +27,13 @@ img {
 
 p {
     padding: 10px;
+}
+
+aside {
+    width: 400px;
+    margin: 10px;
+    border: 0;
+    padding: 10;
+    background-color: #0000ff;
+    color: white;
 }
