--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ h1 {
     color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -26,7 +26,7 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0;
 }
 
 aside {
@@ -36,4 +36,15 @@ aside {
     padding: 10;
     background-color: #0000ff;
     color: white;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 10px;
+    border-top: 1px dashed rgb(10 10 10 / 0.5);
+    text-align: center;
 }
