--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ aside {
     width: 400px;
     margin: 10px;
     border: 0;
-    padding: 10;
+    padding: 1px                            15px;
     background-color: #0000ff;
     color: white;
 }
