--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --basic-dark-blue: darkblue;
-    --white-background: white;
+    --white-background: #ffffff;
 }
 
 nav {
@@ -28,6 +34,8 @@ main img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 p {
@@ -39,17 +47,37 @@ aside {
     margin: 10px;
     border: 0;
     padding: 10px 15px;
-    background-color: var(--basic-dark-blue);
-    color: var(--white-background);
+    text-align: center;
+    position: relative;
 }
 
 aside img {
-    width: 200px;
+    width: 20em;
     height: auto;
+    text-align: center;
+}
+
+aside h2 {
+    position: absolute;
+    color: black;
+    left: 60px;
 }
 
 footer {
     margin-top: 10px;
     border-top: 1px dashed rgb(10 10 10 / 0.5);
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    border: 1px solid black;
+    padding: 1rem;
+    background-color: var(--basic-dark-blue);
+    color: var(--white-background);
+}
+
+.bumpdown {
+    margin-top: 6rem;
 }
