another commit with all efforts to fix page max width and position relative/absolute for text to appear over hero image being to no avail so far

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,6 +12,14 @@
     max-width: 400;
 }
 */
+.hero {
+    position: relative;
+}
+
+/* Can't figure out why relative & absolute position
+ declarations aren't working to get the heading and paragraph
+ over top of the hero image. */
+
 .hero img {
     display: block;
     width: 100%;
