--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,6 +5,10 @@
     --accent-hunyadi-yellow: #F6AE2D;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 header,
 main,
 footer {
@@ -34,8 +38,11 @@ header {
 .menu-button {
     text-decoration: none;
     color: var(--secondary-delft-blue);
-    padding: 14px;
-    line-height: 22px;
+    background-color: var(--accent-white-smoke);
+    border: 1px var(--primary-picton-blue) solid;
+    padding-left: 16px;
+    padding-right: 16px;
+    line-height: 30px;
 }
 
 .hero {
@@ -115,9 +122,11 @@ header {
 }
 
 .adventure-figure {
-    width: 100%;
-    height: 100%;
     margin: 15px;
+}
+
+.adventure-figure img {
+    width: 100;
 }
 
 .caption {
