--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -58,14 +58,20 @@ textarea {
 }
 
 input[type="checkbox"] {
-    width: 100px;
+    width: 20px;
+    height: 20px;
     vertical-align: bottom;
+    margin: 0;
 }
 
 button {
-    margin: 10px;
+    margin: 10px auto 0;
     padding: 7px;
     border-radius: 4px;
+    background-color: darkblue;
+    color: white;
+    font-weight: bold;
+    width: 100px;
 }
 
 button:hover {
@@ -95,7 +101,11 @@ footer {
     grid-template-columns: 1fr 2fr;
 }
 
+form>fieldset:nth-of-type(2)>label {
+    text-align: center;
+    margin-bottom: 5px;
+}
+
 /* Haven't figured out: */
 
 /* Styling the checkbox element to be larger than the default size */
-/* (HTML: making the rows property increase the number of rows in textarea */
