--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,6 +7,7 @@
 
 * {
     box-sizing: border-box;
+    display: block;
 }
 
 header,
@@ -58,6 +59,98 @@ header {
     font-family: "Racing Sans One";
     font-size: 48px;
     position: absolute;
+}
+.staff-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    max-width: 600px;
+    margin-top: 20px;
+    grid-gap: 10px;
+    align-items: top;
+}
+
+.employee-figure {
+    margin: 0;
+}
+
+.employee-figure img {
+    width: 100%;
+}
+
+.hear-from-you-heading {
+    font-family: "STIX Two Text";
+    color: black;
+    font-size: 30px;
+    margin-left: 20px;
+    grid-column: 1/3;
+}
+.employee-figure:nth-of-type(1) {
+    grid-row: 2/3;
+}
+
+.employee-figure:nth-of-type(2) {
+    grid-row: 2/3;
+}
+
+.employee-figure:nth-of-type(3) {
+    grid-row: 2/3;
+}
+
+.fig-caption {
+    justify-items: center;
+}
+
+form {
+    margin-top: 30px;
+    font-family: "STIX Two Text";
+}
+
+form > fieldset > legend {
+    font-size: 24px;
+    font-family: "STIX Two Text";
+}
+
+form > label, input, textarea {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+form > fieldset > textarea {
+    min-width: 600px;
+    max-width: 100%;
+}
+
+.choice {
+    display: inline;
+}
+
+.contact-heading1 {
+    margin: 0 auto;
+    background-color: var(--secondary-delft-blue);
+    line-height: 100px;
+    font-family: "Racing Sans One";
+    color: var(--accent-white-smoke);
+    text-align: center;
+    font-size: 52px;
+}
+
+.company-information {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-top: 0px;
+    grid-gap: 15px;
+    text-align: left;
+    font-family: "STIX Two Text";
+}
+
+.contact-info {
+    margin-top: 5px;
+}
+
+.map-section {
+    margin-top: 40px;
 }
 
 .article1 {
