--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,7 +7,6 @@
 
 * {
     box-sizing: border-box;
-    display: block;
 }
 
 header,
@@ -60,6 +59,7 @@ header {
     font-size: 48px;
     position: absolute;
 }
+
 .staff-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -84,6 +84,7 @@ header {
     margin-left: 20px;
     grid-column: 1/3;
 }
+
 .employee-figure:nth-of-type(1) {
     grid-row: 2/3;
 }
@@ -105,17 +106,19 @@ form {
     font-family: "STIX Two Text";
 }
 
-form > fieldset > legend {
+form>fieldset>legend {
     font-size: 24px;
     font-family: "STIX Two Text";
 }
 
-form > label, input, textarea {
+form>label,
+input,
+textarea {
     margin-top: 10px;
     margin-bottom: 20px;
 }
 
-form > fieldset > textarea {
+form>fieldset>textarea {
     min-width: 600px;
     max-width: 100%;
 }
