--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -69,21 +69,23 @@ header {
     grid-gap: 10px;
 }
 
-.trip-figure > article {
+.trip-figure > figcaption {
     font-family: "STIX Two Text";
+    font-weight: bold;
 }
 
 .trip-caption {
     text-wrap: wrap;
+    font-family: "STIX Two Text";
 }
 
 .popular-trips-grid {
     display: flex;
     flex-flow: row wrap;
-    row-gap: 25px;
+    row-gap: 5px;
     justify-content: space-around;
     max-width: 800px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .trips-table {
@@ -109,6 +111,7 @@ header {
     bottom: 65px;
     left: 25px;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .employee-figure {
@@ -132,7 +135,6 @@ header {
     color: black;
     font-size: 30px;
     margin-left: 20px;
-    grid-column: 1/3;
 }
 
 .employee-figure:nth-of-type(1) {
