--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -57,14 +57,14 @@ header {
     position: absolute;
     font-size: 36px;
     font-family: "Racing Sans One";
-    border: 5px solid var(-);
+    border: 5px solid var(--accent-white-smoke);
     border-radius: 7px;
     background-color: var(--secondary-delft-blue);
     padding: 10px;
     left: 50%;
     margin-left: -100px;
-    min-width: 195px;
-    width: 195px;
+    min-width: 201px;
+    width: 201px;
     top: 200px;
     /* fix this for vertical centering */
 
